adding s3 send auth tfa routes

--- a/app.json
+++ b/app.json
@@ -19,6 +19,22 @@
             "description": "CORS Domain to whitelist",
             "value": "*",
             "required": false
-    }
+    },
+    "APP_NAME": {
+            "description": "APP name",
+            "value": "APP",
+    },
+    "TWILIO_API_KEY": {
+            "description": "Provide to enable SMS capabilities",
+            "required": false
+    },
+    "AWS_ACCESS_KEY": {
+            "description": "For s3upload",
+            "required": false
+    },
+    "AWS_SECRET_KEY": {
+            "description": "For s3upload",
+            "required": false
+    } 
   }
 }
