--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@rexfng/auth": "^6.31.0",
+    "@rexfng/auth": "^8.12.0",
     "@rexfng/db": "^5.1.0",
+    "@rexfng/s3upload": "^1.0.0",
+    "@rexfng/send": "^1.0.3",
+    "@rexfng/tfa": "^2.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
