--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     },
     "APP_NAME": {
             "description": "APP name",
-            "value": "APP",
+            "value": "APP"
     },
     "TWILIO_API_KEY": {
             "description": "Provide to enable SMS capabilities",
